--- a/styles/style.css
+++ b/styles/style.css
@@ -6,15 +6,37 @@ body {
   grid-template-rows: 1fr;
   width: 100%;
 }
-
-header {
+body header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #06283D;
   width: 100%;
   height: 100vh;
-  background-color: #000000;
 }
-
-nav {
+body header button {
+  text-align: center;
+  font-size: 24px;
+  border: none;
+  width: 100px;
+  height: 30px;
+  color: #DFF6FF;
+  background-color: #1363DF;
+}
+body nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #1363DF;
   height: 100vh;
   width: 100%;
-  background-color: #ff0000;
+}
+body nav button {
+  text-align: center;
+  font-size: 24px;
+  border: none;
+  width: 100px;
+  height: 30px;
+  color: #47B5FF;
+  background-color: #06283D;
 }/*# sourceMappingURL=style.css.map */
