--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,54 +1,8 @@
-// Cores de forma root
-$cor-header: #06283D;
-$cor-nav: #1363DF;
-$cor-principal: #DFF6FF;
-$cor-secundaria: #47B5FF;
-
-@mixin corpoBtn {
-    text-align: center;
-    font-size: 24px;
-    border: none;
-    width: 100px;
-    height: 30px;
-}
-
-@mixin flexCenter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    width: 100%;
-
-    header {
-        @include flexCenter();
-        background-color: $cor-header;
-        width: 100%;
-        height: 100vh;
-
-        button {
-            @include corpoBtn();
-            color: $cor-principal;
-            background-color: $cor-nav;
-        }
-    }
-
-    nav {
-        @include flexCenter();
-        background-color: $cor-nav;
-        height: 100vh;
-        width: 100%;
-
-        button {
-            @include corpoBtn();
-            color: $cor-secundaria;
-            background-color: $cor-header;
-        }
-    }
-}
+@import './abstract/reset';
+@import './abstract/fonte';
+@import './abstract/base';
+@import './abstract/variaveis';
+@import './components/header';
+@import './components/nav';
+@import './components/main';
+@import './components/footer';
