--- a/styles/abstract/_variaveis.scss
+++ b/styles/abstract/_variaveis.scss
@@ -1,4 +1,9 @@
-// fontes
-$fonte: 'Roboto', sans-serif;
+// fonte
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+$fonte-roboto: 'Roboto', sans-serif;
 
 // cores
+$cor-primaria: #FAF7F0;
+$cor-secundaria: #CDFCF6;
+$cor-terciaria: #BCCEF8;
+$cor-quaternaria: #98A8F8;
