--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,18 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 html,
 body,
 div,
 span,
-applet,
 object,
 iframe,
+figure,
 h1,
 h2,
 h3,
@@ -20,42 +23,24 @@ p,
 blockquote,
 pre,
 a,
-abbr,
-acronym,
-address,
-big,
-cite,
 code,
-del,
-dfn,
 em,
 img,
-ins,
-kbd,
-q,
-s,
-samp,
 small,
 strike,
 strong,
 sub,
 sup,
 tt,
-var,
 b,
 u,
 i,
-center,
-dl,
-dt,
-dd,
 ol,
 ul,
 li,
 fieldset,
 form,
 label,
-legend,
 table,
 caption,
 tbody,
@@ -64,25 +49,13 @@ thead,
 tr,
 th,
 td,
-article,
-aside,
+main,
 canvas,
-details,
 embed,
-figure,
-figcaption,
 footer,
 header,
-hgroup,
-menu,
 nav,
-output,
-ruby,
 section,
-summary,
-time,
-mark,
-audio,
 video {
   margin: 0;
   padding: 0;
@@ -90,20 +63,18 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: none;
+     -moz-text-size-adjust: none;
+          text-size-adjust: none;
 }
 
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
 footer,
 header,
-hgroup,
-menu,
 nav,
-section {
+section,
+main {
   display: block;
 }
 
@@ -134,18 +105,12 @@ table {
   border-spacing: 0;
 }
 
-html,
-body {
-  box-sizing: border-box;
+input {
+  border-radius: 0;
 }
 
-header ul {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-header ul li a {
-  font-weight: bold;
-  text-transform: uppercase;
-  text-decoration: none;
+html, body {
+  box-sizing: border-box;
+  background-color: #98A8F8;
+  font-family: "Roboto", sans-serif;
 }/*# sourceMappingURL=style.css.map */
