--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 *,
 *:before,
 *:after {
@@ -111,6 +115,119 @@ input {
 
 html, body {
   box-sizing: border-box;
-  background-color: #98A8F8;
   font-family: "Roboto", sans-serif;
+}
+
+header {
+  width: 100%;
+  background-color: #5800FF;
+  justify-content: space-around;
+}
+header ul {
+  height: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+header ul a {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: bold;
+  color: #72FFFF;
+  padding: 0 0 4px 0;
+  transition: 0.2s;
+}
+header ul a:hover {
+  border-bottom: 3px solid #00D7FF;
+}
+header section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url("../../imagens/banner.jpeg") 27% center no-repeat;
+  min-height: 350px;
+  background-size: cover;
+  opacity: 0.9;
+}
+header section div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 330px;
+  height: 120px;
+  background-color: #72FFFF;
+  border-radius: 25px;
+}
+header section div h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+header section div h2 {
+  font-size: 1.5rem;
+}
+
+nav {
+  background-color: #000;
+}
+
+main section h3 {
+  font-size: 1.2rem;
+  color: #5800FF;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 300;
+  margin: 1rem;
+}
+main section h4 {
+  text-align: center;
+  font-size: 1rem;
+  color: #0096FF;
+  font-weight: 300;
+}
+main section .cards {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main section .cards .card {
+  margin: 1rem;
+  width: 360px;
+  text-align: center;
+}
+main section .cards .card h5 {
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 10px 0;
+}
+main section .cards .card p {
+  font-size: 1rem;
+  font-weight: 300;
+  line-height: 1.5rem;
+}
+main section .cards .card .img-container {
+  padding-bottom: 2px;
+  border-bottom: 6px solid #0096FF;
+}
+main section .cards .card .img-container img {
+  width: 100%;
+}
+main #cupom {
+  background-color: #5800FF;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+main .flor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+footer {
+  text-align: center;
+  background-color: #00D7FF;
 }/*# sourceMappingURL=style.css.map */
