--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,3 +1,8 @@
 @import './abstract/reset';
 @import './abstract/base';
 @import './abstract/variaveis';
+@import './components/header';
+@import './components/nav';
+@import './components/main';
+@import './components/footer';
+
